--- a/src/style.css
+++ b/src/style.css
@@ -2,34 +2,15 @@
 Green 600 (medium): hsl(169, 82%, 27%)
 Red: hsl(0, 66%, 54%) */
 
-.container-main { 
-  border-radius: 15px;
+form{
   background-color: white;
-  width: 40%;
-  height: 95%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  padding: 25px 20px;
-}
-
-.container-main p {
-  font-size: 1.8rem;
-  font-weight: 600;
-}
-
-.container-main button{
-  background-color: hsl(169, 82%, 27%);
-}
-
-.container-main button:hover{
-  background-color: hsl(169, 82%, 27%);
+  width: 35%;
+  height: 70%;
 }
 
 textarea{
   max-height: 80px;
 }
-
 
 
 
@@ -48,44 +29,3 @@ input[type="email"],input[type="password"],input[type="radio"],input[type="text"
 
 
 
-.janela{
-  background-color: #111827;
-  position: absolute;
-  top:-20%;
-  width: 40%;
-  height: 20%;
-  border-radius: 10px;
-  padding: 25px 0 0 20px;
-  transition: all 1s;
-}
-
-.progressBar {
-  position: absolute;
-  background-color: #16a34a;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 10px;
-  border-radius: 0 0 10px 10px;
-  transition: all 2s ease-in;
-}
-
-.fa-regular{
-  color:white;
-  font-size: 1.5rem;
-}
-
-span{
-  color: white;
-  font-weight: 800;
-}
-
-.janela p{
-  margin-top: 15px;
-  color: white;
-} 
-
-i{
-  vertical-align: sub;
-  margin-right: 10px;
-}
